fix box-sizing on mobile devices

--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -7,6 +7,12 @@
     --border-color: rgb(176, 175, 175);
 }
 
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
 html,
 body {
     margin: 0;
@@ -269,7 +275,6 @@ footer {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 60px;
     background-color: var(--thru-black);
     border-top: var(--border-color) 2px solid;
     padding: 20px;
@@ -278,9 +283,9 @@ footer {
 .footer-icon {
     width: 40px;
     padding: 5px;
-    filter:invert(100%);
+    filter: invert(100%);
     box-sizing: border-box;
-    transition: all .2s ease-in-out; 
+    transition: all .2s ease-in-out;
 }
 
 .footer-icon:hover {
@@ -315,8 +320,8 @@ footer {
 
 .icon {
     width: 70px;
-    margin-left:15px;
-    margin-right:15px;
+    margin-left: 15px;
+    margin-right: 15px;
     padding: 10px;
     background-color: white;
     border: black 1px solid;
@@ -328,7 +333,7 @@ footer {
 }
 
 .icons-container {
-    display:flex;
+    display: flex;
     justify-content: center;
     padding-top: 15px;
     padding-bottom: 15px;
@@ -356,6 +361,7 @@ footer {
     .projects-container {
         display: block;
     }
+
     #proj-two {
         margin-top: 100px;
     }
@@ -384,6 +390,7 @@ footer {
     h2 {
         margin-top: 40px;
     }
+
     .project-image {
         max-height: 270px;
     }
@@ -397,12 +404,15 @@ footer {
     h2 {
         font-size: 60px;
     }
+
     .project-image {
         max-width: 100vw;
     }
+
     p {
         width: 85vw;
     }
+
     a {
         padding: 0;
     }
@@ -412,6 +422,7 @@ footer {
     .nav {
         max-width: 100vw;
     }
+
     h3 {
         font-size: 20px;
     }
